# digital-twin-robot-NVD

./: .commitlintrc.json  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PROJECT_ROADMAP.md  README.md  Taskfile.yaml  USER_TODO.md  cliff.toml  docker-compose.yml  maps  mkdocs.yml  pyproject.toml  requirements-dev.txt  tests
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-compose.yml  build-containers.yml  ci-cd.yml  code-quality.yml  lint-test.yml  maintenance.yml  release.yml  security.yml
api/openapi/: main.yaml
api/openapi/parameters/: _index.yaml  common.yaml
api/openapi/paths/: cognitive.yaml  fleet.yaml  health.yaml  robot.yaml  simulation.yaml  voice.yaml
api/openapi/responses/: _index.yaml  errors.yaml
api/openapi/schemas/: _index.yaml  cognitive.yaml  common.yaml  fleet.yaml  health.yaml  robot.yaml  simulation.yaml  voice.yaml
aws/: bootstrap.sh  cloudformation.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
backup/: __init__.py  backup_manager.py  recovery.py
canary/: __init__.py  canary_manager.py  traffic_router.py
chaos/: __init__.py  cli.py  engine.py  experiments.py
cognitive/conversation/: __init__.py  context_manager.py  response_generator.py  session_manager.py
cognitive_service/: Dockerfile  multilingual_asr.py  noise_filter.py  object_detection.py  requirements.txt  tts_client.py  wake_word_detector.py
cognitive_service/config/: cognitive.yaml
cognitive_service/src/: asr_client.py  command_bridge.py  intent_parser.py  schemas.py
compliance/: __init__.py  compliance_reporter.py
config/: fastrtps_profile.xml  foxglove_layout.json  nav2_params.yaml
core/: __init__.py  container.py
cost/: __init__.py  cost_analyzer.py  resource_monitor.py
docs/: ARCHITECTURE.md  AUDIT_CHECKLIST.md  AUDIT_PROMPTS.md  AWS_DEPLOYMENT.md  CODE_REFERENCE.md  CONTRIBUTING.md  DEMO_VIDEO_SCRIPT.md  SETUP.md  index.md  quickstart.md
docs/modules/: BACKUP.md  CANARY.md  COMPLIANCE.md  CORE.md  COST.md  EDGE.md  EXPERIMENTS.md  FEATURES.md  FLEET.md  INFRASTRUCTURE.md  LOGGING.md  PERCEPTION.md  PIPELINE.md  PLUGINS.md  RATELIMIT.md  REGISTRY.md  RESILIENCE.md  SCENARIOS.md  SDK.md  SECRETS.md  SERVICEMESH.md  TEMPLATES.md  TENANCY.md  VOICE.md  WEBHOOKS.md  XR.md
edge/: __init__.py  edge_deployment.py
experiments/: __init__.py  experiment.py
features/: __init__.py  feature_manager.py
k8s/: DEPLOYMENT.md
k8s/helm/digital-twin-robotics/: Chart.yaml  values.yaml
k8s/helm/digital-twin-robotics/templates/: NOTES.txt  _helpers.tpl  cognitive-deployment.yaml  configmaps.yaml  hpa.yaml  ingress.yaml  network-policies.yaml  nvidia-deployments.yaml  pdb.yaml  pvc.yaml  ros2-isaac-deployments.yaml  secrets.yaml  serviceaccount.yaml  services.yaml
logging_/: __init__.py  aggregator.py
monitoring/: __init__.py  alert_rules.yaml  cognitive_metrics.py  prometheus.yaml  prometheus_metrics.py
monitoring/dashboards/: fleet_management.json  gpu_inference.json  overview.json  simulation.json  voice_processing.json
observability/: __init__.py  nvidia_instrumentation.py  otel-collector-config.yaml  ros2_instrumentation.py  tracing.py
perception/scene_understanding/: __init__.py  scene_graph.py  scene_understanding_node.py  spatial_reasoning.py
pipeline/: __init__.py  data_pipeline.py
plugins/: __init__.py  plugin_manager.py
profiling/: __init__.py  middleware.py  nvidia_profiler.py  profiler.py
ratelimit/: __init__.py  rate_limiter.py
registry/: __init__.py  model_registry.py
resilience/: __init__.py  circuit_breaker.py
ros2_ws/: Dockerfile
ros2_ws/src/cognitive_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/cognitive_bridge/cognitive_bridge/: __init__.py  bridge_node.py
ros2_ws/src/fleet_management/: CMakeLists.txt  fleet_manager.py  package.xml  robot_agent.py
ros2_ws/src/fleet_management/config/: fleet_config.yaml
ros2_ws/src/fleet_management/launch/: multi_robot_launch.py
ros2_ws/src/robot_bringup/: package.xml
ros2_ws/src/robot_bringup/launch/: bringup.launch.py
ros2_ws/src/robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/robot_description/launch/: robot_description.launch.py
ros2_ws/src/robot_description/urdf/: robot.urdf.xacro
scenarios/: __init__.py  scenario_runner.py
scripts/: check_environment.sh  check_gpu.sh  demo.py  health_monitor.py  orchestrator.py  ros2_diagnostics.py  run_demo.sh  setup.sh
sdk/: __init__.py  sdk_generator.py
secrets_/: __init__.py  vault_client.py
security/: __init__.py  dast_scanner.py  dependency_checker.py  sast_scanner.py
servicemesh/: __init__.py  mesh_config.py
simulation/: predictive_maintenance.py  twin_sync.py
simulation/config/: ros2_bridge_config.json
simulation/environments/: warehouse_config.yaml
simulation/robots/: robot_config.yaml
simulation/scripts/: launch_sim.py
templates/: __init__.py  twin_templates.py
tenancy/: __init__.py  tenant_manager.py
tests/: __init__.py  test_scene_understanding.py
tests/load/: __init__.py  config.py  locustfile.py
webhooks/: __init__.py  webhook_manager.py
xr/: __init__.py  xr_integration.py
