<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>1.0.0</version>
  <description>Launch files for Digital Twin Robot</description>
  <maintainer email="jack@example.com">Jack Amichai</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>cognitive_bridge</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
